--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://db:3306/ms_user_db
+spring.datasource.url = jdbc:mysql://ms-auth-db.cvuwqv2lyawf.us-east-1.rds.amazonaws.com:3306/ms_user_db
 spring.datasource.username = root
 spring.datasource.password = 153486
 
