--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://ms-auth-db.cvuwqv2lyawf.us-east-1.rds.amazonaws.com:3306/ms_user_db
 spring.datasource.username = root
-spring.datasource.password = 153486
+spring.datasource.password = 153486abc
 
 
 ## Hibernate Properties
